<resources>
    <string name="app_name">Warehouse Management</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_account">Input account</string>
    <string name="input_password">Input password</string>
    <string name="remember_password">Remember password</string>
    <string name="sign_in">Sign in</string>
    <string name="Productname">Tên sản phảm</string>
    <string name="Productprice">Giá sản phẩm</string>
    <string name="Quantity">Số lượng</string>
    <string name="Update">Cập nhật</string>
    <string name="CREATEENTRYFORM">TẠO PHIẾU NHẬP</string>
    <string name="b_n_mu_n_th_m_m_y_s_n_ph_m">Bạn muốn thêm mấy sản phẩm?</string>
    <string name="Add">Tạo</string>
    <string name="t_o_phi_u_xu_t">TẠO PHIẾU XUẤT</string>
    <string name="b_n_mu_n_xu_t_m_y_s_n_ph_m">Bạn muốn xuất mấy sản phẩm?</string>
    <string name="s_l_ng_c_n_l_i_trong_kho">Số lượng còn lại trong kho:</string>
    <string name="ExportPrice">Giá xuất</string>
</resources>
