<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Fragment.FraPhieuXuat.AddPhieuXuatFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/t_o_phi_u_xu_t"
        android:textColor="#D60C0C"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_n_mu_n_xu_t_m_y_s_n_ph_m" />

    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="0" />

    <Spinner
        android:id="@+id/spnTenSP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s_l_ng_c_n_l_i_trong_kho" />

        <TextView
            android:id="@+id/txtSoLuongConLai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/txtSoLuong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Quantity"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/txtGiaXuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ExportPrice"
        android:importantForAutofill="no"
        android:inputType="number" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Add" />

</LinearLayout>